--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
           
         <div class="text-content">
-          <p>Importante</p>
+          <h3>Importante</h3>
           <img src="sticky-notes.png"/>
         </div>
         
